--- a/styles/Index.module.css
+++ b/styles/Index.module.css
@@ -1,12 +1,39 @@
 .controls {
   transition: opacity 150ms ease;
   opacity: 0;
+
+  .control {
+    background-color: rgba(227, 0, 15, 0.75);
+    border: none;
+    color: white;
+  }
 }
 
 .root {
   &:hover {
     .controls {
       opacity: 1;
+
+      .control {
+        background-color: rgba(227, 0, 15, 1);
+      }
     }
+  }
+}
+
+.viewport {
+  border-radius: 16px;
+}
+
+.indicator {
+  width: 12px;
+  height: 4px;
+  transition: 250ms ease;
+  background-color: rgba(227, 0, 15, 0.75);
+  position: relative;
+  bottom: -32px;
+
+  &[data-active] {
+    background-color: rgba(227, 0, 15, 1);
   }
 }
