--- a/styles/Index.module.css
+++ b/styles/Index.module.css
@@ -37,3 +37,11 @@
     background-color: rgba(227, 0, 15, 1);
   }
 }
+
+.card {
+  transition: 500ms ease-in-out;
+  &:hover {
+    transform: scale(1.025);
+    box-shadow: 0px 0px 15px 1px rgba(0, 0, 0, 1);
+  }
+}
