--- a/styles/Index.module.css
+++ b/styles/Index.module.css
@@ -42,6 +42,6 @@
   transition: 500ms ease-in-out;
   &:hover {
     transform: scale(1.025);
-    box-shadow: 0px 0px 15px 1px rgba(0, 0, 0, 1);
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 5px 15px;
   }
 }
